--- a/requirements.txt
+++ b/requirements.txt
@@ -1,129 +1,12 @@
-Name:                     Version:
-_libgcc_mutex             0.1
-_openmp_mutex             4.5
-_tflow_select             2.1.0
-absl-py                   0.10.0
-aiohttp                   3.6.3
-astunparse                1.6.3
-async-timeout             3.0.1
-attrs                     20.2.0
-backcall                  0.2.0
-blas                      1.0
-blinker                   1.4
-brotlipy                  0.7.0
-c-ares                    1.16.1
-ca-certificates           2021.10.8
-cachetools                4.1.1
-certifi                   2021.10.8
-cffi                      1.14.3
-chardet                   3.0.4
-click                     7.1.2
-cloudpickle               1.6.0
-cryptography              3.1.1
-cudatoolkit               10.1.243
-cudnn                     7.6.5
-cupti                     10.1.168
-cycler                    0.10.0
-cytoolz                   0.11.0
-dask-core                 2.30.0
-decorator                 4.4.2
-freetype                  2.10.4
-gast                      0.3.3
-google-auth               1.22.1
-google-auth-oauthlib      0.4.1
-google-pasta              0.2.0
-grpcio                    1.31.0
-h5py                      2.10.0
-hdf5                      1.10.6
-idna                      2.10
-imageio                   2.9.0
-importlib-metadata        2.0.0
-intel-openmp              2020.2
-ipython                   7.18.1
-ipython_genutils          0.2.0
-jedi                      0.18.1
-jpeg                      9b
-keras                     2.3.1
-keras-applications        1.0.8
-keras-base                2.3.1
-keras-preprocessing       1.1.0
-kiwisolver                1.2.0
-lcms2                     2.11
-ld_impl_linux-64          2.35.1
-libffi                    3.3
-libgcc-ng                 9.3.0
-libgfortran-ng            7.3.0
-libgomp                   9.3.0
-libpng                    1.6.37
-libprotobuf               3.13.0.1
-libstdcxx-ng              9.3.0
-libtiff                   4.1.0
-lz4-c                     1.9.2
-markdown                  3.3.2
-matplotlib-base           3.3.1
-mkl                       2019.4
-mkl-service               2.3.0
-mkl_fft                   1.2.0
-mkl_random                1.1.0
-multidict                 4.7.6
-ncurses                   6.3
-networkx                  2.5
-numpy                     1.19.1
-numpy-base                1.19.1
-oauthlib                  3.1.0
-olefile                   0.46
-openssl                   1.1.1n
-opt_einsum                3.1.0
-parso                     0.8.0
-pexpect                   4.8.0
-pickleshare               0.7.5
-pillow                    8.0.0
-pip                       21.2.4
-prompt-toolkit            3.0.8
-protobuf                  3.13.0.1
-ptyprocess                0.6.0
-pyasn1                    0.4.8
-pyasn1-modules            0.2.8
-pycparser                 2.20
-pygments                  2.7.1
-pyjwt                     1.7.1
-pyopenssl                 19.1.0
-pyparsing                 2.4.7
-pysocks                   1.7.1
-python                    3.8.12
-python-dateutil           2.8.1
-python_abi                3.8
-pywavelets                1.1.1
-pyyaml                    5.3.1
-readline                  8.1.2
-requests                  2.24.0
-requests-oauthlib         1.3.0
-rsa                       4.6
-scikit-image              0.17.2
-scipy                     1.5.2
-setuptools                58.0.4
-six                       1.15.0
-sqlite                    3.38.0
-tensorboard               2.2.1
-tensorboard-plugin-wit    1.6.0
-tensorflow                2.2.0
-tensorflow-base           2.2.0
-tensorflow-estimator      2.2.0
-tensorflow-gpu            2.2.0
-termcolor                 1.1.0
-tifffile                  2020.10.1
-tk                        8.6.11
-toolz                     0.11.1
-tornado                   6.0.4
-traitlets                 5.0.5
-urllib3                   1.25.11
-wcwidth                   0.2.5
-werkzeug                  1.0.1
-wheel                     0.37.1
-wrapt                     1.12.1
-xz                        5.2.5
-yaml                      0.2.5
-yarl                      1.6.2
-zipp                      3.3.1
-zlib                      1.2.11
-zstd                      1.4.4
+numpy
+scipy
+Pillow
+cython
+matplotlib
+scikit-image
+tensorflow>=1.3.0
+keras>=2.0.8
+opencv-python
+h5py
+imgaug
+IPython[all]
